# PolyOp

./: .gitignore  pyproject.toml  readme.md  setup.py  start.gif.REMOVED.git-id  test.py
examples/: exp0.py  exp2.py  exp3.py  exp7.py
examples/base/: exp0.py  exp1.py  exp4.py  exp5.py  exp6.py  exp8.py
examples/results/: start.gif.REMOVED.git-id  start.webm  start.webm.REMOVED.git-id
include/: ChiralMap.h  CirclePackingRepr.h  DetachedFacesOpt.h  Edge.h  Optimizer.h  Polyhedron.h  Renderer.h  includes.h  shapes.h  utils.h
include/Eigen/src/Core/: MatrixBase.h
src/: CirclePackingRepr.cpp  DetachedFacesOpt.cpp  Edge.cpp  Optimizer.cpp  Renderer.cpp  pybind_polyop.cpp
src/Polyhedron/: Mesh_Operations.cpp  Move_To.cpp  Polyhedron.cpp  Position_Operations.cpp  automorphism.cpp
tests/: CirclePackingRepr.py  DetachedFacesOpt.py  test_circle_finding.py  test_circle_finding_3d.py  test_circle_finding_chatgpt.py
