[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polyop"
version = "0.0.1"
description = "polyop package"
authors = [
    { name="Andreas Faust", email="andreas.s.faust@gmail.com" }
]

[project.optional-dependencies]
test = ["pytest"]